--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "framer": "^2.4.1",
+    "motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
